--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 class="logo">Industrial Pollution</h2>
         <nav class="navigation">
             <a href="#" class="active">Home</a>
-            <a href="./index.html">Problem</a>
+            <a href="./index2.html">Problem</a>
             <a href="./index.html">Map</a>
             <a href="./index.html">Solution</a>
             <a href="./index.html">About Developer</a>
