--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
         <h2 class="logo">Industrial Pollution</h2>
         <nav class="navigation">
             <a href="./index.html" class="active">Home</a>
-            <a href="#">Problem</a>
+            <a href="#" class="active2">Problem</a>
             <a href="./index.html">Map</a>
             <a href="./index.html">Solution</a>
             <a href="./index.html">About Developer</a>
