--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navigation">
             <a href="#" class="active">Home</a>
             <a href="./index2.html">Problem</a>
-            <a href="./index.html">Map</a>
+            <a href="./index3.html">Map</a>
             <a href="./index.html">Solution</a>
             <a href="./index.html">About Developer</a>
         
