--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" class="active">Home</a>
             <a href="./index2.html">Problem</a>
             <a href="./index3.html">Map</a>
-            <a href="./index.html">Solution</a>
+            <a href="./index4.html">Solution</a>
             <a href="./index.html">About Developer</a>
         
         </nav>
