--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,9 @@
         <nav class="navigation">
             <a href="./index.html" class="active">Home</a>
             <a href="#" class="active2">Problem</a>
-            <a href="./index.html">Map</a>
-            <a href="./index.html">Solution</a>
-            <a href="./index.html">About Developer</a>
+            <a href="./index3.html">Map</a>
+            <a href="./index4.html">Solution</a>
+            <a href="./index5.html">About Developer</a>
         
         </nav>
     </header>
