--- a/index3.html
+++ b/index3.html
@@ -21,8 +21,8 @@
             <a href="index.html" class="active">Home</a>
             <a href="./index2.html">Problem</a>
             <a href="#" class="active3">Map</a>
-            <a href="./index.html">Solution</a>
-            <a href="./index.html">About Developer</a>
+            <a href="./index4.html">Solution</a>
+            <a href="./index5.html">About Developer</a>
         
         </nav>
     </header>
